<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/color"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:onClick="chooseColor"
            android:text="@string/btn_color"
            android:textSize="10sp" />

        <Button
            android:id="@+id/effacer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:onClick="delete"
            android:text="@string/btn_del"
            android:textSize="10sp" />

        <Button
            android:id="@+id/courbe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:onClick="modeCurve"
            android:text="@string/btn_curve"
            android:textSize="10sp" />

        <Button
            android:id="@+id/ligne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:onClick="modeLine"
            android:text="@string/btn_line"
            android:textSize="10sp" />

        <Button
            android:id="@+id/rectangle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:onClick="modeRect"
            android:text="@string/btn_rect"
            android:textSize="10sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/scene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9">

    </FrameLayout>
</LinearLayout>