<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ColorChoose">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/red"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/red" />

        <SeekBar
            android:id="@+id/redbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:max="255" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/green" />

        <SeekBar
            android:id="@+id/greenbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:max="255" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/blue" />

        <SeekBar
            android:id="@+id/bluebar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:max="255" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/scene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

    </FrameLayout>

    <Button
        android:id="@+id/validate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="valider"
        android:text="@string/btn_validate"
        android:visibility="visible" />
</LinearLayout>